--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="/clients">Les ien-Cli</a>
+                        <a class="nav-link" aria-current="page" href="/clients">Les clients</a>
                     </li>
                     <li sec:authorize="isAnonymous()" class="nav-item">
                         <a class="nav-link" href="/login">Login</a>
