--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -6,37 +6,37 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title th:text="${title}">Titre du document</title>
-    <div th:replace="fragments/header :: header-css"/>
+    <div th:replace="fragments/header :: header-css"></div>
 </head>
 <body>
-<div th:replace="fragments/header :: header"/>
+<div th:replace="fragments/header :: header"></div>
 
-<div class="container">
-<h1 th:text="${title}">Un titre</h1>
+<div class="container" style="margin-left: 10%">
+<h1 th:text="${title}" style="text-align: center">Un titre</h1>
     <hr>
     <div class="clients">
-        <table class="table table-bordered table-hover" width="90%" align="center">
+        <table class="table table-bordered table-hover" style="width: 100%; align-content: center">
             <thead class="table-primary">
             <tr>
-                <th text-align="center" width="60px" scope="col">Genre</th>
-                <th text-align="center" width="60px" scope="col">Titre</th>
-                <th text-align="center" width="60px" scope="col">Nom</th>
-                <th text-align="center" width="60px" scope="col">Prénom</th>
-                <th text-align="center" width="60px" scope="col">Email</th>
-                <th text-align="center" width="60px" scope="col">Date de naissance</th>
-                <th text-align="center" width="60px" scope="col">Numéro de téléphone</th>
-                <th text-align="center" width="60px" scope="col">Type de carte</th>
-                <th text-align="center" width="60px" scope="col">Numéro de carte</th>
-                <th text-align="center" width="60px" scope="col">Code de vérification</th>
-                <th text-align="center" width="60px" scope="col">Date d'expiration</th>
-                <th text-align="center" width="60px" scope="col">Adresse</th>
-                <th text-align="center" width="60px" scope="col">Taille</th>
-                <th text-align="center" width="60px" scope="col">Poids</th>
-                <th text-align="center" width="60px" scope="col">Véhicule (année et modèle)</th>
-                <th text-align="center" width="60px" scope="col">Marque</th>
-                <th text-align="center" width="60px" scope="col">Coordonnées GPS</th>
-                <th text-align="center" width="60px" scope="col">Conformité des informations</th>
-                <th text-align="center" width="60px" scope="col">Supprimer ou non</th>
+                <th style="text-align: center;width: 60px" scope="col">Genre</th>
+                <th style="text-align: center;width: 60px" scope="col">Titre</th>
+                <th style="text-align: center;width: 60px" scope="col">Nom</th>
+                <th style="text-align: center;width: 60px" scope="col">Prénom</th>
+                <th style="text-align: center;width: 60px" scope="col">Email</th>
+                <th style="text-align: center;width: 60px" scope="col">Date de naissance</th>
+                <th style="text-align: center;width: 60px" scope="col">Numéro de téléphone</th>
+                <th style="text-align: center;width: 60px" scope="col">Type de carte</th>
+                <th style="text-align: center;width: 60px" scope="col">Numéro de carte</th>
+                <th style="text-align: center;width: 60px" scope="col">Code de vérification</th>
+                <th style="text-align: center;width: 60px" scope="col">Date d'expiration</th>
+                <th style="text-align: center;width: 60px" scope="col">Adresse</th>
+                <th style="text-align: center;width: 60px" scope="col">Taille</th>
+                <th style="text-align: center;width: 60px" scope="col">Poids</th>
+                <th style="text-align: center;width: 60px" scope="col">Véhicule (année et modèle)</th>
+                <th style="text-align: center;width: 60px" scope="col">Marque</th>
+                <th style="text-align: center;width: 200px" scope="col">Coordonnées GPS</th>
+                <th style="text-align: center;width: 60px" scope="col">Conformité des informations</th>
+                <th style="text-align: center;width: 60px" scope="col">Supprimer ou non</th>
             </thead>
             <tbody>
             <th:block th:each="client : ${clients}">
@@ -44,27 +44,31 @@
 
                     <div class="client-description">
                         <tr>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.genre}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.titre}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.lastname}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.firstname}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.adresseMail}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.dateNaissance}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.numTel}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.CCType}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.CCNumber}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.CVV2}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.CCExpires}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.adresse}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.Centimeters}+' cm'"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.kilograms}+' kg'"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.anneeV}+' '+${client.modeleV}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.marqueV}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.Latitude}+${client.longitude}"></td>
-                            <td text-align="center" text-width="25%" overflow="hidden" th:text="${client.estValide}"></td>
-                            <td>
-                            <button sec:authorize="hasAuthority('ROLE_VIP')" th:action="@{/delete/{id}(id=${client.id})}" method="get" th:text="${client.id}+' '+${client.firstname}"></button>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.genre}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.titre}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.lastname}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.firstname}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.adresseMail}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.dateNaissance}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.numTel}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.CCType}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.CCNumber}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.CVV2}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.CCExpires}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.adresse}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.centimeters}+' cm'"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.kilograms}+' kg'"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.anneeV}+' '+${client.modeleV}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.marqueV}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="'Latitude : '+${client.latitude}+'&#10;'+'Longitude : '+${client.longitude}"></td>
+                            <td style="text-align: center;width: 25%; overflow: hidden" th:text="${client.estValide}"></td>
+                            <!-- On vérifie si l'utilisateur a le rôle ROLE_VIP et si le client est bien invalide -->
+                            <td th:if="${#authorization.expression('hasRole(''ROLE_VIP'')') and !client.estValide}">
+                                <!-- Bouton de suppression avec un lien vers l'action de suppression -->
+                                <a th:href="@{/delete/{id}(id=${client.id})}" class="btn btn-danger">Supprimer</a>
                             </td>
+
+
                         </tr>
                     </div>
                 </section>
@@ -74,7 +78,7 @@
     </div>
 </div>
 
-<div th:replace="fragments/footer:: footer"/>
+<div th:replace="fragments/footer:: footer"></div>
 
 </body>
 </html>
